utam-compiler/tests/snapshots/snapshot_tests__simple_element.snap
---
source: utam-compiler/tests/snapshot_tests.rs
expression: code
---
use utam_core::prelude::*;
///Simple clickable button
pub struct SimpleElement {
    root: WebElement,
}
impl PageObject for SimpleElement {
    fn root(&self) -> &WebElement {
        &self.root
    }
}
#[async_trait::async_trait]
impl RootPageObject for SimpleElement {
    const ROOT_SELECTOR: &'static str = ".simple-button";
    async fn load(driver: &WebDriver) -> UtamResult<Self> {
        Self::before_load(driver).await?;
        let root = driver.find(By::Css(Self::ROOT_SELECTOR)).await?;
        Self::from_element(root).await
    }
    async fn from_element(element: WebElement) -> UtamResult<Self> {
        Ok(Self { root: element })
    }
}
impl SimpleElement {
    /// Execute beforeLoad conditions
    async fn before_load(driver: &WebDriver) -> UtamResult<()> {
        Ok(())
    }
}
impl SimpleElement {}
